--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # database config
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.0.201:3306/legend-erp?useUnicode=true&useSSL=false&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://192.168.0.201:3306/legend-oa?useUnicode=true&useSSL=false&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
