--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.100.25.129:3306/jijiajia?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=vpclubjjj
+spring.datasource.password=vpclubjjj0401
+
+db.schema=jijiajia
+db.template=jijiajia
+db.base.package=cn.vpclub.bulk.api.moudles.account
+db.vo.package=cn.vpclub.bulk.api.moudles.account.vo
