--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # database config
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.100.25.129:3306/jijiajia?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://106.14.6.73:3305/jijiajia?useUnicode=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
-spring.datasource.password=vpclubjjj0401
+spring.datasource.password=JsrI79vBkLA
 
 db.schema=jijiajia
 db.template=jijiajia
-db.base.package=cn.vpclub.bulk.api.moudles.account
-db.vo.package=cn.vpclub.bulk.api.moudles.account.vo
+db.base.package=cn.vpclub.bulk.api.moudles.order
+db.vo.package=cn.vpclub.bulk.api.moudles.order.vo
