--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.datasource.url=jdbc:mysql://106.14.6.73:3305/jijiajia?useUnicode=true&use
 spring.datasource.username=root
 spring.datasource.password=JsrI79vBkLA
 
-db.schema=jijiajia
-db.template=jijiajia
-db.base.package=cn.vpclub.bulk.api.moudles.order
-db.vo.package=cn.vpclub.bulk.api.moudles.order.vo
+db.schema=e8
+db.template=e8
+db.base.package=cn.runzogroup.biz.e8.crm
+db.vo.package=cn.runzogroup.biz.e8.crm.vo
+db.table.prefix=e8_crm_
