--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,19 @@
 # database config
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://106.14.6.73:3305/jijiajia?useUnicode=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://106.14.6.73:3305/e8?useUnicode=true&useSSL=false&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
 spring.datasource.password=JsrI79vBkLA
 
 db.schema=e8
 db.template=e8
-db.base.package=cn.runzogroup.biz.e8.crm
-db.vo.package=cn.runzogroup.biz.e8.crm.vo
-db.table.prefix=e8_crm_
+db.module=mdm
+db.base.package=cn.runzogroup.biz.e8.mdm
+db.vo.package=cn.runzogroup.biz.e8.mdm.vo
+db.table.prefix=e8_mdm_
+
+
+#db.schema=fabric
+#db.template=e8
+#db.base.package=cn.chinafabricmall.biz.fabric.mdm
+#db.vo.package=cn.chinafabricmall.biz.fabric.mdm.vo
+#db.table.prefix=fabric_mdm_
