--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.password=JsrI79vBkLA
 
 db.schema=e8
 db.template=e8
-db.module=mes
-db.base.package=cn.runzogroup.biz.e8.mes
-db.vo.package=cn.runzogroup.biz.e8.mes.vo
-db.table.prefix=e8_mes_
+db.module=crm
+db.base.package=cn.runzogroup.biz.e8.crm
+db.vo.package=cn.runzogroup.biz.e8.crm.vo
+db.table.prefix=e8_crm_
 
 
 #db.schema=fabric
